--- a/index.html
+++ b/index.html
@@ -5,38 +5,61 @@
     <meta charset="utf-8">
     <style>
         /* GLOBAL STYLES */
-        a {
-            color: red;
+        html, body {
+            margin: 0;
+            padding: 0;
         }
-        
+        h1 {
+            font-size: 7vw;
+            margin-top: 0;
+        }
+        a {
+            color: #ff0000;
+        }
+        h2 {
+            font-size: 30px;
+        }
+
+        /* HERO STYLES */
+        .full-hero {
+            background-color: #c7dbfc;
+            height: 50vh;
+            width: 75vw;
+        }
+
         /* SOCIAL STYLES */
         .social-link {
+            background: rgba(150, 150, 150, 0.5);
             color: blue;
         }
 
         /* BIO STYLES */
         .bio-box {
-            border: 1px solid black;
+            border: 1px solid #000000;
+            width: 50%;
         }
         .bio-copy a {
-            color: green;
+            color: #008000;
         }
-        
+
     </style>
   </head>
   <body>
-    <h1>I'm an h1</h1>
-    <ul>
-        <li>
-            <a href="https://example.com/">Link</a>
-        </li>
-        <li>
-            <a href="https://example.com/">Link</a>
-        </li>
-        <li>
-            <a href="https://example.com/">Link</a>
-        </li>
-    </ul>
+    <div class="full-hero hero-home">
+        <h1>I'm an h1</h1>
+        <ul>
+            <li>
+                <a href="https://example.com/">Link</a>
+            </li>
+            <li>
+                <a href="https://example.com/">Link</a>
+            </li>
+            <li>
+                <a href="https://example.com/">Link</a>
+            </li>
+        </ul>
+    </div>
+
     <h2>I'm an h2</h2>
     <div class="bio-box">
         <h3>Michael Hartl</h3>
